--- a/package.json
+++ b/package.json
@@ -1,23 +1,29 @@
 {
-  "name": "myblog",
-  "type": "module",
-  "version": "0.0.1",
-  "scripts": {
-    "dev": "astro dev",
-    "build": "astro build",
-    "preview": "astro preview",
-    "astro": "astro",
-    "format": "prettier --write ."
-  },
-  "dependencies": {
-    "@tailwindcss/vite": "^4.1.4",
-    "astro": "^5.7.4",
-    "tailwindcss": "^4.1.4",
-    "tw-animate-css": "^1.2.8"
-  },
-  "devDependencies": {
-    "@tailwindcss/typography": "^0.5.16",
-    "prettier": "^3.5.3",
-    "prettier-plugin-astro": "^0.14.1"
-  }
+	"name": "myblog",
+	"type": "module",
+	"version": "0.0.1",
+	"scripts": {
+		"dev": "astro dev",
+		"build": "astro build",
+		"preview": "astro preview",
+		"astro": "astro",
+		"format": "prettier --write ."
+	},
+	"dependencies": {
+		"@tailwindcss/vite": "^4.1.4",
+		"astro": "^5.7.4",
+		"tailwindcss": "^4.1.4",
+		"tw-animate-css": "^1.2.8"
+	},
+	"devDependencies": {
+		"@tailwindcss/typography": "^0.5.16",
+		"@typescript-eslint/parser": "^8.31.0",
+		"eslint": "^9.25.1",
+		"eslint-config-prettier": "^10.1.2",
+		"eslint-plugin-astro": "^1.3.1",
+		"eslint-plugin-jsx-a11y": "^6.10.2",
+		"prettier": "^3.5.3",
+		"prettier-plugin-astro": "^0.14.1",
+		"typescript-eslint": "^8.31.0"
+	}
 }
