--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
 		"format": "prettier --write ."
 	},
 	"dependencies": {
+		"@astrojs/mdx": "^4.2.5",
 		"@tailwindcss/vite": "^4.1.4",
 		"astro": "^5.7.4",
 		"tailwindcss": "^4.1.4",
