--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
 		"@astrojs/mdx": "^4.2.5",
 		"@tailwindcss/vite": "^4.1.4",
 		"astro": "^5.7.4",
+		"remark-breaks": "^4.0.0",
 		"tailwindcss": "^4.1.4",
 		"tw-animate-css": "^1.2.8"
 	},
