--- a/package.json
+++ b/package.json
@@ -11,14 +11,23 @@
 	},
 	"dependencies": {
 		"@astrojs/mdx": "^4.2.5",
+		"@astrojs/react": "^4.2.7",
+		"@radix-ui/react-slot": "^1.2.0",
 		"@tailwindcss/vite": "^4.1.4",
 		"astro": "^5.7.4",
+		"class-variance-authority": "^0.7.1",
+		"clsx": "^2.1.1",
+		"lucide-react": "^0.507.0",
+		"react": "^19.1.0",
+		"react-dom": "^19.1.0",
 		"remark-breaks": "^4.0.0",
-		"tailwindcss": "^4.1.4",
-		"tw-animate-css": "^1.2.8"
+		"tailwind-merge": "^3.2.0",
+		"tailwindcss": "^4.1.4"
 	},
 	"devDependencies": {
 		"@tailwindcss/typography": "^0.5.16",
+		"@types/react": "^19.1.2",
+		"@types/react-dom": "^19.1.3",
 		"@typescript-eslint/parser": "^8.31.0",
 		"eslint": "^9.25.1",
 		"eslint-config-prettier": "^10.1.2",
@@ -26,6 +35,7 @@
 		"eslint-plugin-jsx-a11y": "^6.10.2",
 		"prettier": "^3.5.3",
 		"prettier-plugin-astro": "^0.14.1",
+		"tw-animate-css": "^1.2.8",
 		"typescript-eslint": "^8.31.0"
 	}
 }
