--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
 		"react": "^19.1.0",
 		"react-dom": "^19.1.0",
 		"remark-breaks": "^4.0.0",
+		"satori": "^0.18.3",
+		"sharp": "^0.34.5",
 		"tailwind-merge": "^3.2.0",
 		"tailwindcss": "^4.1.4"
 	},
