--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,7 +9,8 @@
       ]
     },
     "jsx": "react-jsx",
-    "jsxImportSource": "react"
+    "jsxImportSource": "react",
+    "esModuleInterop": true
   },
   "include": [
     ".astro/types.d.ts",
